--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </style>
   </head>
   <body>
+
+    <strong className='text-red-600'> Status:</strong>
+    <persona-card></persona-card>
+    <hr/>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
